Import of ELLIPSE/PDL-Opt-NonLinear-0.02 from CPAN.
gitpan-cpan-distribution: PDL-Opt-NonLinear
gitpan-cpan-version:      0.02
gitpan-cpan-path:         ELLIPSE/PDL-Opt-NonLinear-0.02.tar.gz
gitpan-cpan-author:       ELLIPSE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension PDL::Opt::NonLinear
 
+0.02  Wed Sep 21 16:16:15 2005
+
+  * add PDL.pm in prerequities (Makefile.PL)
+
 0.01  Sat Sep 17 17:13:24 2005
 
   * Initial release
