Import of ELLIPSE/PDL-Opt-NonLinear-0.03 from CPAN.
gitpan-cpan-distribution: PDL-Opt-NonLinear
gitpan-cpan-version:      0.03
gitpan-cpan-path:         ELLIPSE/PDL-Opt-NonLinear-0.03.tar.gz
gitpan-cpan-author:       ELLIPSE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension PDL::Opt::NonLinear
 
+0.03  Fri Aug 18 00:00:00 2007
+
+  * ASA fixes (64bit arch)
+  * new Makefile.PL (opti library automatically built and linked)
+
 0.02  Wed Sep 21 16:16:15 2005
 
   * add PDL.pm in prerequities (Makefile.PL)
