--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+pdl-opt-nonlinear (0.03-1) unstable; urgency=low
+
+  * new upustram release.
+
+ -- Gregory Vanuxem <vanuxemg@yahoo.fr>  Fri, 17 Aug 2007 16:16:34 -0200
+
+
 pdl-opt-nonlinear (0.02-1) unstable; urgency=low
 
   * new upustram release.
