--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pdl-opt-nonlinear (0.04-1) unstable; urgency=low
+
+  * new upustram release.
+
+ -- Gregory Vanuxem <gvanuxem.perl@gmail.com>  Fri, 03 Aug 2018 15:45:34 -0200
+
 pdl-opt-nonlinear (0.03-1) unstable; urgency=low
 
   * new upustram release.
