--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-PDL/Opt/NonLinear version 0.04
+PDL/Opt/NonLinear version 0.05
 =============================
 
 This module provide some optimization routines for PDL.
@@ -25,5 +25,5 @@ COPYRIGHT AND LICENCE
 Copyright (C) 2005-2018 Grégory Vanuxem
 
 This library is free software; you can redistribute it and/or modify
-it under the same terms as Perl itself. 
-
+it under the terms of the Perl Artistic License as in the file Artistic_2
+in this distribution.
