--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pdl-opt-nonlinear (0.05-1) unstable; urgency=low
+
+  * new upustram release.
+
+ -- Gregory Vanuxem <gvanuxem.perl@gmail.com>  Thu, 16 Aug 2018 00:00:00 -0200
+
 pdl-opt-nonlinear (0.04-1) unstable; urgency=low
 
   * new upustram release.
